[+] plxShow::staticList : ajout de la variable #group_status
[+] Thème par défaut : affichage des groupes de pages statiques sous forme de menus déroulant
[+] Plugins : si la langue par défaut n'est pas disponible on tente de charger le fr.php sinon on prend le 1er fichier de langue dispo
[+] Test existence libraire XML à l'installation (onctribution Sbgodin)
[+] #69: plxAdmin:editArticle - ajout du hook plxAdminEditArticleEnd
[+] #177: Ajout de la protection du lien téléphone (contribution cfdev)
[+] #191: plxShow:catList - Ajout de la variable #cat_description
[+] #194: Rédaction d'un article: optimisation de l'ajout rapide de tag (contribution MatthieuQuantin)
[-] Suppression icon help.png, remplacée par du css
BUG Non affichage du nombre de commentaires d'un article si les commentaires sont fermés
BUG plxUtils::removeAccents - amélioration de la prise en compte des caractères non latin
BUG Administration > Pages Statiques : lien Voir incomplet
BUG Administration : problème d'affichage du compteur des articles en attente de validation
BUG Administration : modification impossible de la date du commentaire à partir de l'icône calendrier
BUG Administration : Mise à jour auteur commentaire avec apostrophe/caractères spéciaux transformés en équivalent html
BUG Mauvais lien des commentaires dans les flux rss
BUG Gestionnaire de médias: mauvais affichage de l'extension d'un fichier si le fichier n'a pas d'extension
BUG Administration : conflit entre la langue par défaut du site et la langue du profil utilisateur
BUG #171: Décalage theme par défaut
BUG #174: Mauvaise réécriture d'url avec les liens data:image, javascript et commençant par #
BUG #176: Image preview.png du thème par defaut déformée
BUG #181: Commentaires toujours refusés si capcha désactivé (contribution ortolot)
BUG #182: Affichage en trop si commentaires fermés (contribution josé)
BUG #183: Fichier css custom non chargé sur la page auth.php